# CommonTools

./: CMakeLists.txt  TestQT_zh_CN.qm  TestQT_zh_CN.ts  testqt.msvs.ps1
config/: python3.manifest  python310._pth
resources/: resources.aps  resources.qrc
src/: dialog.cpp  dialog.h  icamera.h  icamera_global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videofile.cpp  videofile.h  videofile_global.h  videofilemanager.cpp  videofilemanager.h
tools/: 7z2107-x64.7z  DebugView.7z  HexEditor.7z  ProcessMonitor.7z  depends22_x64.7z  notes.txt  vs_Community_2019.7z
tools/LaserXImage/: designer  qt.conf
